--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -117,6 +117,16 @@ a:focus {
     font-weight: bold;
 }
 
-.record-modal {
+#record-modal {
     width: 100%;
+}
+
+#record-modal tbody tr {
+    padding: 10px;
+    border: 1px solid grey;
+}
+
+#record-modal tbody tr td {
+    padding: 10px;
+    border: 1px solid grey;
 }
